SessionwithKavya/projectwithKaya/force-app/main/default/objects/User/fields/Available_for_Leads__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Leads</label>
    <type>Checkbox</type>
</CustomField>