SessionwithKavya/projectwithKaya/force-app/main/default/objects/User/fields/Selling_Region__c.field-meta.xml
<CustomField>
    <fullName>Selling_Region__c</fullName>
    <label>Selling Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>